--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	</head>
 	<body>
 <h1>Eric's Javascript Playground</h1>
-<img src="Eric1.jpg" alt="Picture of me" style="width:163px;height:123px;">
+<img src="images/Eric1.jpg" alt="Picture of me" style="width:163px;height:123px;">
 <br>
 <h2>This webpage is just for playing around with Javascript and jQuery. It is NOT for displaying web design skills!</h2>
 <br>
