--- a/rps/rps.html
+++ b/rps/rps.html
@@ -5,8 +5,11 @@
         <link rel='stylesheet' type='text/css' href='style.css'/>
         <script type='text/javascript' src='script.js'></script>
 	</head>
+
 	<body>
-<h1>Rock, Paper, Scissors</h1>
+		<h1>Rock, Paper, Scissors</h1>
+
+		<script src="rps.js"></script>
 
 
 	</body>
