--- a/rps/rps.html
+++ b/rps/rps.html
@@ -1,16 +1,20 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<title>Rock, Paper, Scissors</title>
+<head>
+	<title>Rock, Paper, Scissors</title>
         <link rel='stylesheet' type='text/css' href='style.css'/>
-        <script type='text/javascript' src='script.js'></script>
-	</head>
+</head>
 
-	<body>
-		<h1>Rock, Paper, Scissors</h1>
+<body>
+<h1>Rock, Paper, Scissors</h1>
+<p id="computerChoice"></p>
+<p id="winnerOrLoser"></p>
 
-		<script src="rps.js"></script>
 
+<script src="rps.js"></script>
 
 	</body>
+		
+
+
 </html>
