--- a/index.html
+++ b/index.html
@@ -3,15 +3,18 @@
 	<head>
 		<title>Eric's Javascript Playground</title>
         <link rel='stylesheet' type='text/css' href='style.css'/>
-        <script type='text/javascript' src='script.js'></script>
-	</head>
+       	</head>
 	<body>
 <h1>Eric's Javascript Playground</h1>
-<img src="images/Eric1.jpg" alt="Picture of me" style="width:163px;height:123px;">
+<img src="images/Eric1.JPG" alt="Picture of me" style="width:163px;height:123px;">
 <br>
-<h2>This webpage is just for playing around with Javascript and jQuery. It is NOT for displaying web design skills!</h2>
+<h2>This webpage is just for playing around with Javascript, jQuery, Git and Github. <br> It is <em>not</em> for showing you my web design skills--it doesn't even have any css!
+</h2>
 <br>
-<h3>The links below don't work yet. When I finish making this website, they will take you to code I wrote for Codecademy courses:</h3>
+You can see the code in my Github repository:
+<a href="https://github.com/erikkuraason/erikkuraason.github.io">https://github.com/erikkuraason/erikkuraason.github.io</a>
+<br>
+<p>The links below take you to code I wrote for Codecademy courses:</p>
 <ul>
 <li><a href="rps/rps.html">Rock, Paper Scissors</a></li>
 <li><a href="namesearch\namesearch.html">Search Text for Your Name</a></li>
@@ -21,8 +24,8 @@
 <li><a href="cashregister\cashregister.html">Cash Register</a></li>
 </ul>
 
-<br>
 
 
+ <script type='text/javascript' src='script.js'></script>
 	</body>
 </html>
