--- a/index.html
+++ b/index.html
@@ -1,31 +1,32 @@
 <!DOCTYPE html>
-<html>
-	<head>
-		<title>Eric's Javascript Playground</title>
-        <link rel='stylesheet' type='text/css' href='style.css'/>
-       	</head>
-	<body>
-<h1>Eric's Javascript Playground</h1>
-<img src="images/Eric1.JPG" alt="Picture of me" style="width:163px;height:123px;">
-<br>
-<h2>This webpage is just for playing around with Javascript, jQuery, Git and Github. <br> It is <em>not</em> for showing you my web design skills--it doesn't even have any css!
-</h2>
-<br>
-You can see the code in my Github repository:
-<a href="https://github.com/erikkuraason/erikkuraason.github.io">https://github.com/erikkuraason/erikkuraason.github.io</a>
-<br>
-<p>The links below take you to code I wrote for Codecademy courses:</p>
-<ul>
-<li><a href="rps/rps.html">Rock, Paper Scissors</a></li>
-<li><a href="namesearch\namesearch.html">Search Text for Your Name</a></li>
-<li><a href="dragonslayer\dragonslayer.html">Dragonslayer</a></li>
-<li><a href="music\music.html">What Kind of Music Do You Like?</a></li>
-<li><a href="addressbook\addressbook.html">Address Book</a></li>
-<li><a href="cashregister\cashregister.html">Cash Register</a></li>
-</ul>
+  <html>
+    <head>
+      <title>Eric's Javascript Playground</title>
+      <link rel='stylesheet' type='text/css' href='style.css'/>
+    </head>
+    <body>
+      <h1>Eric's Javascript Playground</h1>
+      <img src="images/Eric1.JPG" alt="Picture of me" style="width:163px;height:123px;">
+      <br>
+      <p>This webpage is just for playing around with Javascript, jQuery, Git and Github.
+      <br> 
+      It is <em>not</em> for showing you my web design skills--it doesn't even have any css!</p>
+      <br>
+      The links below take you to code I wrote for Codecademy courses:
+      <ul>
+      <li><a href="rps/rps.html">Rock, Paper Scissors</a></li>
+      <li><a href="namesearch\namesearch.html">Search Text for Your Name</a></li>
+      <li><a href="dragonslayer\dragonslayer.html">Dragonslayer</a></li>
+      <li><a href="music\music.html">What Kind of Music Do You Like?</a></li>
+      <li><a href="addressbook\addressbook.html">Address Book</a></li>
+      <li><a href="cashregister\cashregister.html">Cash Register</a></li>
+      </ul>
+
+      <p>You can view the code in my Github repository:
+      <a href="https://github.com/erikkuraason/erikkuraason.github.io">https://github.com/erikkuraason/erikkuraason.github.io</a></p>
 
 
 
- <script type='text/javascript' src='script.js'></script>
-	</body>
-</html>
+      <script type='text/javascript' src='script.js'></script>
+    </body>
+  </html>
