--- a/music/music.html
+++ b/music/music.html
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<title>What Kind of Music Do You Like?</title>
-        <link rel='stylesheet' type='text/css' href='style.css'/>
-        <script type='text/javascript' src='script.js'></script>
-	</head>
-	<body>
-<h1>What Kind of Music Do You Like?</h1>
+  <head>
+    <title>What Kind of Music Do You Like?</title>
+    <link rel='stylesheet' type='text/css' href='style.css'/>
+    <script type='text/javascript' src='script.js'></script>
+  </head>
+  <body>
+    <h1>What Kind of Music Do You Like?</h1>
+    <p id="userChoice"></p>
+    <p id="computerResponse"></p>
 
-
-	</body>
+    <script src="music.js"></script>
+  </body>
 </html>
+
+
