--- a/music/music.html
+++ b/music/music.html
@@ -6,7 +6,8 @@
     <script type='text/javascript' src='script.js'></script>
   </head>
   <body>
-    <h1>What Kind of Music Do You Like?</h1>
+    <h2>What Kind of Music Do You Like?</h2>
+    <button onclick = "rpsFunction()">Click to start</button>
     <p id="userChoice"></p>
     <p id="computerResponse"></p>
 
