--- a/rps/rps.html
+++ b/rps/rps.html
@@ -1,20 +1,18 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<title>Rock, Paper, Scissors</title>
-        <link rel='stylesheet' type='text/css' href='style.css'/>
-</head>
+  <head>
+    <title>Rock, Paper, Scissors</title>
+    <link rel='stylesheet' type='text/css' href='style.css'/>
+  </head>
 
-<body>
-<h1>Rock, Paper, Scissors</h1>
-<p id="computerChoice"></p>
-<p id="winnerOrLoser"></p>
+  <body>
+    <h2>Rock, Paper, Scissors</h2>
+    <button onclick = "rpsFunction()">Click to start</button>
+    <p id="computerChoice"></p>
+    <p id="winnerOrLoser"></p>
 
+    <script src="rps.js"></script>
 
-<script src="rps.js"></script>
-
-	</body>
-		
-
+  </body>
 
 </html>
