--- a/index.html
+++ b/index.html
@@ -8,18 +8,18 @@
       <h1>Eric's Javascript Playground</h1>
       <img src="images/Eric1.JPG" alt="Picture of me" style="width:163px;height:123px;">
       <br>
-      <p>This webpage is just for playing around with Javascript, jQuery, Git and Github.
+      <p>This webpage is just something I quickly threw together for playing around with Javascript, jQuery, Git and Github.
       <br> 
       It is <em>not</em> for showing you my web design skills--it doesn't even have any css!</p>
       <br>
-      The links below take you to code I wrote for Codecademy courses:
+      The links below take you to Javascript programs that I created for Codecademy courses:
       <ul>
       <li><a href="rps/rps.html">Rock, Paper Scissors</a></li>
-      <li><a href="namesearch\namesearch.html">Search Text for Your Name</a></li>
-      <li><a href="dragonslayer\dragonslayer.html">Dragonslayer</a></li>
+      <li><a href="namesearch\namesearch.html">Search Text for Your Name (not added yet, but coming soon)</a></li>
+      <li><a href="dragonslayer\dragonslayer.html">Dragonslayer (not added yet, but coming soon)</a></li>
       <li><a href="music\music.html">What Kind of Music Do You Like?</a></li>
-      <li><a href="addressbook\addressbook.html">Address Book</a></li>
-      <li><a href="cashregister\cashregister.html">Cash Register</a></li>
+      <li><a href="addressbook\addressbook.html">Address Book (not added yet, but coming soon)</a></li>
+      <li><a href="cashregister\cashregister.html">Cash Register (not added yet, but coming soon)</a></li>
       </ul>
 
       <p>You can view the code in my Github repository:
