--- a/music/music.html
+++ b/music/music.html
@@ -10,6 +10,8 @@
     <button onclick = "rpsFunction()">Click to start</button>
     <p id="userChoice"></p>
     <p id="computerResponse"></p>
+    <br>
+    <a href="../index.html">Back to home page</a>
 
     <script src="music.js"></script>
   </body>
