--- a/rps/rps.html
+++ b/rps/rps.html
@@ -10,6 +10,8 @@
     <button onclick = "rpsFunction()">Click to start</button>
     <p id="computerChoice"></p>
     <p id="winnerOrLoser"></p>
+    <br>
+    <a href="../index.html">Back to home page</a>
 
     <script src="rps.js"></script>
 
