--- a/addressbook/addressbook.html
+++ b/addressbook/addressbook.html
@@ -3,11 +3,15 @@
 	<head>
 		<title>Address Book</title>
         <link rel='stylesheet' type='text/css' href='style.css'/>
-        <script type='text/javascript' src='script.js'></script>
-	</head>
+       	</head>
 	<body>
-<h1>Address Book</h1>
+<h2>Address Book will be coming soon!</h2>
+<p id="A"></p>
+<p id="B"></p>
+    <br>
+    <a href="../index.html">Back to home page</a>
 
+<script src="addressbook.js"></script>
 
 	</body>
 </html>
