--- a/cashregister/cashregister.html
+++ b/cashregister/cashregister.html
@@ -6,8 +6,13 @@
         <script type='text/javascript' src='script.js'></script>
 	</head>
 	<body>
-<h1>Cash Register</h1>
+<h2>Cash Register will be coming soon!</h2>
+<p id="a"></p>
+<p id="b"></p>
+    <br>
+    <a href="../index.html">Back to home page</a>
 
+<script src="cashregister.js"></script>
 
 	</body>
 </html>
