--- a/dragonslayer/dragonslayer.html
+++ b/dragonslayer/dragonslayer.html
@@ -6,8 +6,10 @@
         <script type='text/javascript' src='script.js'></script>
 	</head>
 	<body>
-<h1>Dragonslayer</h1>
-
+<h2>Dragonslayer will be coming soon!</h2>
+    <br>
+    <a href="../index.html">Back to home page</a>    <br>
+    <a href="../index.html">Back to home page</a>
 
 	</body>
 </html>
