--- a/namesearch/namesearch.html
+++ b/namesearch/namesearch.html
@@ -6,8 +6,9 @@
         <script type='text/javascript' src='script.js'></script>
 	</head>
 	<body>
-<h1>Search for Your Name</h1>
-
+<h1>"Search for Your Name" will be coming soon!</h1>
+    <br>
+    <a href="../index.html">Back to home page</a>
 
 	</body>
 </html>
