--- a/rps/rps.html
+++ b/rps/rps.html
@@ -7,9 +7,9 @@
 
   <body>
     <h2>Rock, Paper, Scissors</h2>
-    <button onclick = "rpsFunction()">Click to start</button>
-    <p id="computerChoice"></p>
-    <p id="winnerOrLoser"></p>
+    <button onclick = "rpsFunction()">Click to play</button>
+    <p id="gameStatus"></p>
+    
     <br>
     <a href="../index.html">Back to home page</a>
 
