--- a/dragonslayer/dragonslayer.html
+++ b/dragonslayer/dragonslayer.html
@@ -23,6 +23,10 @@
 
 	<div id="gameStatus"></div>
 
+	<br>
+    	<a href="../index.html">Back to home page</a>
+
+
 	<script src="dragonslayer.js"></script>
 	</body>
 </html>
