--- a/addressbook/addressbook.html
+++ b/addressbook/addressbook.html
@@ -1,17 +1,28 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Address Book</title>
+	<title>Address Book</title>
         <link rel='stylesheet' type='text/css' href='style.css'/>
-       	</head>
+
+	<script src="addressbook.js"></script>
+       	
+	</head>
 	<body>
-<h2>Address Book will be coming soon!</h2>
-<p id="A"></p>
-<p id="B"></p>
-    <br>
+	<h2>Address Book</h2>
+
+ 	<p>This program uses an array of objects to create, add to, and search an address book using a while loop, 		for loops, and if statements</p>
+
+	<input id="addressBook" type="button" value="Start address book" onclick="addressBook();" />
+	<br>
+
+	<div id="display"></div>
+ 
+	<br><br>
     <a href="../index.html">Back to home page</a>
 
-<script src="addressbook.js"></script>
 
 	</body>
 </html>
+
+
+<!-- alternative button: <input id="addEntry" type="button" value="Add entry" onclick="addEntry();" /> -->
