--- a/index.html
+++ b/index.html
@@ -12,13 +12,12 @@
       <br> 
       It is <em>not</em> for showing you my web design skills--it doesn't even have any css!</p>
       <br>
-      The links below take you to Javascript programs that I created for Codecademy courses:
+      The links below take you to Javascript programs that I wrote. I modified them from programs that I created for Codecademy courses:
       <ul>
       <li><a href="rps/rps.html">Rock, Paper Scissors</a></li>
       <li><a href="dragonslayer\dragonslayer.html">Dragonslayer</a></li>
       <li><a href="music\music.html">What Kind of Music Do You Like?</a></li>
-      <li><a href="namesearch\namesearch.html">Search Text for Your Name (not added yet, but coming soon)</a></li>
-      <li><a href="addressbook\addressbook.html">Address Book (not added yet, but coming soon)</a></li>
+      <li><a href="addressbook\addressbook.html">Address Book</a></li>
       <li><a href="cashregister\cashregister.html">Cash Register (not added yet, but coming soon)</a></li>
       </ul>
 
