--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <li><a href="rps/rps.html">Rock, Paper Scissors</a></li>
       <li><a href="dragonslayer\dragonslayer.html">Dragonslayer</a></li>
       <li><a href="music\music.html">What Kind of Music Do You Like?</a></li>
-      <li><a href="addressbook\addressbook.html">Address Book</a></li>
+      <li><a href="addressbook\phonebook.html">Phone book</a></li>
       <li><a href="cashregister\cashregister.html">Cash Register (not added yet, but coming soon)</a></li>
       </ul>
 
