--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
       <br>
       <p>This webpage is just something I quickly threw together for playing around with Javascript, jQuery, Git and Github.
       <br> 
-      It is <em>not</em> for showing you my web design skills--it doesn't even have any css!</p>
+      It is <em>not</em> for showing you my web design skills--it doesn't have any css.</p>
       <br>
       The links below take you to Javascript programs that I wrote. I modified them from programs that I created for Codecademy courses:
       <ul>
       <li><a href="rps/rps.html">Rock, Paper Scissors</a></li>
       <li><a href="dragonslayer\dragonslayer.html">Dragonslayer</a></li>
       <li><a href="music\music.html">What Kind of Music Do You Like?</a></li>
-      <li><a href="addressbook\phonebook.html">Phone book</a></li>
+      <li><a href="phonebook\phonebook.html">Phone book</a></li>
       <li><a href="cashregister\cashregister.html">Cash Register (not added yet, but coming soon)</a></li>
       </ul>
 
