--- a/phonebook/phonebook.html
+++ b/phonebook/phonebook.html
@@ -10,7 +10,7 @@
 	<body>
 	<h2>Address Book</h2>
 
- 	<p>This program uses an array of objects to create, add to, and search an address book using a while loop, 		for loops, and if statements</p>
+ 	<p>This program creates a phone book, adds entries to it, searches it, and displays its entries by using an 	array of objects, a while loop, for loops, and if statements</p>
 
 	<input id="phoneBook" type="button" value="Start phone book" onclick="phoneBook();" />
 	<br>
