--- a/rps/rps.html
+++ b/rps/rps.html
@@ -2,12 +2,16 @@
 <html>
   <head>
     <title>Rock, Paper, Scissors</title>
-    <link rel='stylesheet' type='text/css' href='style.css'/>
+    <link rel='stylesheet' type='text/css' href='rps.css'/>
+    <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
   </head>
 
   <body>
     <h2>Rock, Paper, Scissors</h2>
-    <button onclick = "rpsFunction()">Click to play</button>
+    
+<div id="one"></div>
+
     <p id="gameStatus"></p>
     
     <br>
