--- a/dragonslayer/dragonslayer.html
+++ b/dragonslayer/dragonslayer.html
@@ -3,6 +3,9 @@
 	<head>
 	<title>Dragonslayer</title>
 	<link rel='stylesheet' type='text/css' href='style.css'/>
+	<script src="dragonslayer.js"></script>
+	<script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+    	<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
         </head>
 
 	<body>
@@ -16,10 +19,12 @@
 	<br>But if you miss even once, he will kill you!
 	</p>
 
-	<button onclick = "dragonslayerFunction()">Start the battle!</button>
 
-	<br>
-	<br>
+	
+	<!--<button onclick = "dragonslayerFunction()">Start the battle!</button>-->
+	
+
+	<div id="one"></div>
 
 	<div id="gameStatus"></div>
 
