--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <ul>
       <li><a href="rps/rps.html">Rock, Paper Scissors</a></li>
       <li><a href="dragonslayer\dragonslayer.html">Dragonslayer</a></li>
-      <li><a href="music\music.html">What Kind of Music Do You Like?</a></li>
+      <li><a href="dragonadventure">dragonadventure</a></li>
       <li><a href="phonebook\phonebook.html">Phone book</a></li>
       <li><a href="cashregister\cashregister.html">Cash Register (not added yet, but coming soon)</a></li>
       </ul>
