--- a/index.html
+++ b/index.html
@@ -16,9 +16,8 @@
       <ul>
       <li><a href="rps/rps.html">Rock, Paper Scissors</a></li>
       <li><a href="dragonslayer\dragonslayer.html">Dragonslayer</a></li>
-      <li><a href="dragonadventure">dragonadventure</a></li>
+      <li><a href="dragonadventure">Dragon Adventure</a></li>
       <li><a href="phonebook\phonebook.html">Phone book</a></li>
-      <li><a href="cashregister\cashregister.html">Cash Register (not added yet, but coming soon)</a></li>
       </ul>
 
       <p>You can view the code in my Github repository:
