--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <ul>
       <li><a href="rps/rps.html">Rock, Paper Scissors</a></li>
       <li><a href="dragonslayer\dragonslayer.html">Dragonslayer</a></li>
-      <li><a href="dragonadventure">Dragon Adventure</a></li>
+      <li><a href="dragonadventure\dragonadventure.html">Dragon Adventure</a></li>
       <li><a href="phonebook\phonebook.html">Phone book</a></li>
       </ul>
 
