--- a/dragonadventure/dragonadventure.html
+++ b/dragonadventure/dragonadventure.html
@@ -4,14 +4,21 @@
     <title>Dragon Adventure!</title>
     <link rel='stylesheet' type='text/css' href='style.css'/>
     <script type='text/javascript' src='dragonadventure.js'></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+      <meta name = "viewport" content = "width = device-width, initial-scale = 1.0, user-scalable = no">
+      <link rel='stylesheet' type='text/css' href='../style.css'/>
   </head>
   <body>
-    <h2>Dragon Adventure!</h2>
-    <p>Somewhere on your journey, you may find a treasure. But it is guarded by a fierce dragon!</p>
+    <h1 align="center">Dragon Adventure!</h1>
+    <p align="center">Somewhere on your journey, you may find a treasure. But it is guarded by a fierce dragon!</p>
     <p id="gameStatus"></p>
- <button onclick = "adventure()">Click to start</button>
+    <div align="center">
+    <button onclick = "adventure()">Click to start</button>
+    </div>
     <br>
-    <a href="../index.html">Back to home page</a>
+    <div align="center">
+    <a align="center" href="../index.html">Back to home page</a>
+    </div>
   </body>
 </html>
 
