--- a/dragonslayer/dragonslayer.html
+++ b/dragonslayer/dragonslayer.html
@@ -6,13 +6,16 @@
 	<script src="dragonslayer.js"></script>
 	<script src="https://code.jquery.com/jquery-1.12.4.js"></script>
     	<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+ 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+        <meta name = "viewport" content = "width = device-width, initial-scale = 1.0, user-scalable = no">
+        <link rel='stylesheet' type='text/css' href='../style.css'/>
         </head>
 
 	<body>
 
-	<h2>Dragonslayer</h2>
+	<h1 align="center">Dragonslayer</h1>
 
-	<p>Strike the dragon with your sword. 
+	<p align="center">Strike the dragon with your sword. 
 	<br>Each strike will randomly inflict from 0 to 4 points of damage. 
 	<br>If you inflict a total of 4 points of damage, the dragon dies.
 	<br>With each strike, you have a 50/50 chance of hitting or missing.
@@ -24,13 +27,14 @@
 	<!--<button onclick = "dragonslayerFunction()">Start the battle!</button>-->
 	
 
-	<div id="one"></div>
+	<div id="one" align="center"></div>
 
 	<div id="gameStatus"></div>
 
 	<br>
+	<div align="center">
     	<a href="../index.html">Back to home page</a>
-
+	</div>
 
 	<script src="dragonslayer.js"></script>
 	</body>
