--- a/phonebook/phonebook.html
+++ b/phonebook/phonebook.html
@@ -1,25 +1,29 @@
 <!DOCTYPE html>
 <html>
 	<head>
-	<title>Address Book</title>
-        <link rel='stylesheet' type='text/css' href='style.css'/>
-
-	<script src="phonebook.js"></script>
+	<title>Phone Book</title>
+ 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+        <meta name = "viewport" content = "width = device-width, initial-scale = 1.0, user-scalable = no">
+        <link rel='stylesheet' type='text/css' href='../style.css'/>
+        <script src="phonebook.js"></script>
        	
 	</head>
 	<body>
-	<h2>Address Book</h2>
+	<h1 align="center" >Phone Book</h1>
 
- 	<p>This program creates a phone book, adds entries to it, searches it, and displays its entries by using an 	array of objects, a while loop, for loops, and if statements</p>
+ 	<p align="center">This program creates a phone book, adds entries to it, searches it, and displays its entries by using an array of objects, a while loop, for loops, and if statements</p>
 
+	<div align="center">
 	<input id="phoneBook" type="button" value="Start phone book" onclick="phoneBook();" />
+	</div>
 	<br>
 
 	<div id="display"></div>
  
 	<br><br>
-    <a href="../index.html">Back to home page</a>
-
+	<div align="center">
+   	 <a href="../index.html">Back to home page</a>
+	</div>
 
 	</body>
 </html>
