--- a/rps/rps.html
+++ b/rps/rps.html
@@ -5,17 +5,22 @@
     <link rel='stylesheet' type='text/css' href='rps.css'/>
     <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+      <meta name = "viewport" content = "width = device-width, initial-scale = 1.0, user-scalable = no">
+      <link rel='stylesheet' type='text/css' href='../style.css'/>
   </head>
 
   <body>
-    <h2>Rock, Paper, Scissors</h2>
+    <h1 align="center">Rock, Paper, Scissors</h1>
     
-<div id="one"></div>
-
-    <p id="gameStatus"></p>
+    <div id="one" align="center"></div>
+    <br><br>
+    <p id="gameStatus" align="center" ></p>
     
     <br>
+    <div align="center">
     <a href="../index.html">Back to home page</a>
+    </div>
 
     <script src="rps.js"></script>
 
