--- a/dragonadventure/dragonadventure.html
+++ b/dragonadventure/dragonadventure.html
@@ -11,7 +11,8 @@
   <body>
     <h1 align="center">Dragon Adventure!</h1>
     <p align="center">Somewhere on your journey, you may find a treasure. But it is guarded by a fierce dragon!</p>
-    <p id="gameStatus"></p>
+    <br><br>
+    <p id="gameStatus" align="center"></p>
     <div align="center">
     <button onclick = "adventure()">Click to start</button>
     </div>
