--- a/dragonslayer/dragonslayer.html
+++ b/dragonslayer/dragonslayer.html
@@ -28,8 +28,10 @@
 	
 
 	<div id="one" align="center"></div>
+	
+	<br><br>
 
-	<div id="gameStatus"></div>
+	<div id="gameStatus" align="center"></div>
 
 	<br>
 	<div align="center">
