--- a/phonebook/phonebook.html
+++ b/phonebook/phonebook.html
@@ -1,30 +1,40 @@
 <!DOCTYPE html>
+
 <html>
 	<head>
-	<title>Phone Book</title>
- 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+		<title>Phone Book</title>
+ 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
         <meta name = "viewport" content = "width = device-width, initial-scale = 1.0, user-scalable = no">
-        <link rel='stylesheet' type='text/css' href='../style.css'/>
+        <link rel='stylesheet' type='text/css' href='../style.css'>
         <script src="phonebook.js"></script>
        	
 	</head>
+
 	<body>
-	<h1 align="center" >Phone Book</h1>
+		<header>
+			<h1 align="center" >Phone Book</h1>
+		</header>
 
- 	<p align="center">This program creates a phone book, adds entries to it, searches it, and displays its entries by using an array of objects, a while loop, for loops, and if statements</p>
+		<section>
+ 			<p align="center">This program creates a phone book, adds entries to it, searches it, and displays its entries by using an array of objects, a while loop, for loops, and if statements</p>
+		</section>
 
-	<div align="center">
-	<input id="phoneBook" type="button" value="Start phone book" onclick="phoneBook();" />
-	</div>
-	<br>
+		<section>
+			<div align="center">
+				<input id="phoneBook" type="button" value="Start phone book" onclick="phoneBook();" />
+			</div>
+		</section>
 
-	<div id="display" align="center"></div>
- 
-	<br><br>
-	<div align="center">
-   	 <a href="../index.html">Back to home page</a>
-	</div>
+		<section>
+			<div id="display" align="center"></div>
+		</section>
 
+		<section>
+			<div align="center">
+   	 			<a href="../index.html">Back to home page</a>
+			</div>
+		</section>
+		
 	</body>
 </html>
 
