--- a/dragonslayer/dragonslayer.html
+++ b/dragonslayer/dragonslayer.html
@@ -1,42 +1,46 @@
 <!DOCTYPE html>
 <html>
+
 	<head>
-	<title>Dragonslayer</title>
-	<link rel='stylesheet' type='text/css' href='style.css'/>
-	<script src="dragonslayer.js"></script>
-	<script src="https://code.jquery.com/jquery-1.12.4.js"></script>
-    	<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
- 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+		<title>Dragonslayer</title>
+		<link rel='stylesheet' type='text/css' href='style.css'/>
+		<script src="dragonslayer.js"></script>
+		<script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+    		<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+ 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
         <meta name = "viewport" content = "width = device-width, initial-scale = 1.0, user-scalable = no">
         <link rel='stylesheet' type='text/css' href='../style.css'/>
-        </head>
+    </head>
+
+	<header>
+		<h1 align="center">Dragonslayer</h1>
+	</header>
 
 	<body>
-
-	<h1 align="center">Dragonslayer</h1>
-
-	<p align="center">Strike the dragon with your sword. 
-	<br>Each strike will randomly inflict from 0 to 4 points of damage. 
-	<br>If you inflict a total of 4 points of damage, the dragon dies.
-	<br>With each strike, you have a 50/50 chance of hitting or missing.
-	<br>But if you miss even once, he will kill you!
-	</p>
-
-
 	
-	<!--<button onclick = "dragonslayerFunction()">Start the battle!</button>-->
+		<section>
+			<p align="center">Strike the dragon with your sword. 
+			<br>Each strike will randomly inflict from 0 to 4 points of damage. 
+			<br>If you inflict a total of 4 points of damage, the dragon dies.
+			<br>With each strike, you have a 50/50 chance of hitting or missing.
+			<br>But if you miss even once, he will kill you!
+			</p>
+			<!--<button onclick = "dragonslayerFunction()">Start the battle!</button>-->
+		</section>
 	
+	<section>
+		<div id="one" align="center"></div>
+	</section>
 
-	<div id="one" align="center"></div>
-	
-	<br><br>
+	<section>
+		<div id="gameStatus" align="center"></div>
+	</section>
 
-	<div id="gameStatus" align="center"></div>
-
-	<br>
-	<div align="center">
-    	<a href="../index.html">Back to home page</a>
-	</div>
+	<section>
+      <div align="center">
+        <a href="../index.html">Back to home page</a>
+      </div>
+    </section>
 
 	<script src="dragonslayer.js"></script>
 	</body>
