--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <h1 align = "center">Eric's Javascript Playground</h1>
       </header>
 
-      <div class="image" align = "center"><img src="images/Eric1.JPG" alt="Picture of me" style="width:163px;height:123px;"></div>
+      <div class="image" align = "center"><img src="images/Eric1.jpg" alt="Picture of me" style="width:163px;height:123px;"></div>
 
 
       <section class="container-fluid">
